Working join problem generator for trees and DPccp visualization

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,5 +1,6 @@
 FROM golang:1.15
 RUN go get github.com/gin-gonic/gin
-RUN go get -u github.com/cosmtrek/air
+RUN go get github.com/gin-contrib/cors
+RUN go get github.com/cosmtrek/air
 RUN air
 ENV PORT 8080
