--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "dbs-visualization",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://swaldmann.github.io/dbs-visualization",
+  "homepage": "https://swaldmann.github.io/MasterThesis",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
