--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react": "^16.13.1",
     "react-canvas": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-hot-keys": "^2.6.0",
     "react-redux": "^7.2.0",
     "react-scripts": "^3.4.3",
     "react-select": "^3.1.0",
