--- a/client/package.json
+++ b/client/package.json
@@ -10,13 +10,13 @@
     "lodash": "^4.17.20",
     "rc-slider": "^9.3.1",
     "react": "^16.13.1",
-    "react-canvas": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-hot-keys": "^2.6.0",
     "react-redux": "^7.2.0",
     "react-scripts": "^3.4.3",
     "react-select": "^3.1.0",
     "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0"
   },
